Recommendations Feature fully implimented along with frontend.

--- a/Base/recportal/templates/recportal/base.html
+++ b/Base/recportal/templates/recportal/base.html
@@ -26,13 +26,19 @@
    <li><a href="#!">Assign</a></li>
  </ul>
 
+ <ul id="senior_dropdown" class="dropdown-content">
+  <li><a href="#!">My Candidates</a></li>
+  <li><a href="#!">Pitches</a></li>
+  <li><a href="{% url 'recportal:recommendations' %}">Recommendations</a></li>
+</ul>
+
  <nav class="blue darken-4">
    <div class="nav-wrapper">
      <a href="{% url 'recportal:home' %}" class="brand-logo">Recruitments Portal</a>
      <ul class="right hide-on-med-and-down">
-       <li><a class="dropdown-trigger" href="#!" data-target="tasks_dropdown">Tasks<i class="material-icons right">arrow_drop_down</i></a></li>
+       <li><a class="dropdown-trigger" data-target="tasks_dropdown">Tasks<i class="material-icons right">arrow_drop_down</i></a></li>
        <li><a href="#!">Candidates</a></li>
-       <li><a href="badges.html">Senior Panel</a></li>
+       <li><a class="dropdown-trigger" data-target="senior_dropdown">Senior Panel<i class="material-icons right">arrow_drop_down</i></a></li>
      </ul>
    </div>
  </nav>
