Candidate and My Candidates pages added, the base for the profile pages was created. Now high-level planning is required (stubs pages everywhere i.e. planning time.)

--- a/Base/recportal/templates/recportal/recommendations.html
+++ b/Base/recportal/templates/recportal/recommendations.html
@@ -48,7 +48,7 @@
 {% endblock %}
 
 {% block content %}
-  <form action="{% url 'recportal:updaterecommendations' %}" method="post">
+  <form action="{% url 'recportal:recommendations' %}" method="post">
     {% csrf_token %}
   <div>
     {% if data %}
