--- a/Base/recportal/templates/recportal/base.html
+++ b/Base/recportal/templates/recportal/base.html
@@ -27,7 +27,7 @@
  </ul>
 
  <ul id="senior_dropdown" class="dropdown-content">
-  <li><a href="#!">My Candidates</a></li>
+  <li><a href="{% url 'recportal:mycandidates' %}">My Candidates</a></li>
   <li><a href="#!">Pitches</a></li>
   <li><a href="{% url 'recportal:recommendations' %}">Recommendations</a></li>
 </ul>
@@ -37,8 +37,9 @@
      <a href="{% url 'recportal:home' %}" class="brand-logo">Recruitments Portal</a>
      <ul class="right hide-on-med-and-down">
        <li><a class="dropdown-trigger" data-target="tasks_dropdown">Tasks<i class="material-icons right">arrow_drop_down</i></a></li>
-       <li><a href="#!">Candidates</a></li>
+       <li><a href="{% url 'recportal:candidates' %}">Candidates</a></li>
        <li><a class="dropdown-trigger" data-target="senior_dropdown">Senior Panel<i class="material-icons right">arrow_drop_down</i></a></li>
+       <li><a href="{% url 'recportal:signout' %}">Signout</a></li>
      </ul>
    </div>
  </nav>
