MyPitches functionality is up and requires improvement.

--- a/Base/recportal/templates/recportal/base.html
+++ b/Base/recportal/templates/recportal/base.html
@@ -28,6 +28,7 @@
  </ul> -->
 
  <ul id="senior_dropdown" class="dropdown-content">
+  <li><a href="{% url 'recportal:mypitches' %}">My Pitches</a></li>
   <li><a href="{% url 'recportal:mycandidates' %}">My Candidates</a></li>
   <li><a href="{% url 'recportal:recommendations' %}">Recommendations</a></li>
 </ul>
