--- a/Base/recportal/templates/recportal/mypitches.html
+++ b/Base/recportal/templates/recportal/mypitches.html
@@ -15,9 +15,9 @@
     <br>
     <table>
 
-      <tr class="light-blue">
-        <td colspan="3" class="center-align"> Pitch Details </td>
-        <td colspan="5" class="center-align"> Task Details </td>
+      <tr>
+        <td colspan="3" class="center-align light-blue lighten-1"> Pitch Details </td>
+        <td colspan="5" class="center-align light-blue lighten-2"> Task Details </td>
       </tr>
 
       <tr>
