--- a/Base/recportal/templates/recportal/mycandidates.html
+++ b/Base/recportal/templates/recportal/mycandidates.html
@@ -12,10 +12,10 @@
       <table>
 
         <tr>
-          <td colspan="2"> Name </td>
-          <td> Skill 1 </td>
-          <td> Skill 2 </td>
-          <td> About </td>
+          <td colspan="2"><b> Name </b></td>
+          <td><b> Skill 1 </b></td>
+          <td><b> Skill 2 </b></td>
+          <td><b> About </b></td>
         </tr>
 
         {% for candidate in data %}
