--- a/Base/recportal/templates/recportal/mypitches.html
+++ b/Base/recportal/templates/recportal/mypitches.html
@@ -16,19 +16,19 @@
     <table>
 
       <tr>
-        <td colspan="3" class="center-align light-blue lighten-1"> Pitch Details </td>
-        <td colspan="5" class="center-align light-blue lighten-2"> Task Details </td>
+        <td colspan="3" class="center-align light-blue lighten-1"><b> Pitch Details </b></td>
+        <td colspan="5" class="center-align light-blue lighten-2"><b> Task Details </b></td>
       </tr>
 
       <tr>
-        <td class="light-blue lighten-1"> Candidate </td>
-        <td class="light-blue lighten-1"> Potential Team </td>
-        <td class="light-blue lighten-1"> Approved </td>
-        <td class="light-blue lighten-2"> Title </td>
-        <td class="light-blue lighten-2"> Description </td>
-        <td class="light-blue lighten-2"> Issuing Date </td>
-        <td class="light-blue lighten-2"> Due Date </td>
-        <td class="light-blue lighten-2"> Date of Completion </td>
+        <td class="light-blue lighten-1"><b> Candidate </b></td>
+        <td class="light-blue lighten-1"><b> Potential Team </b></td>
+        <td class="light-blue lighten-1"><b> Approved </b></td>
+        <td class="light-blue lighten-2"><b> Title </b></td>
+        <td class="light-blue lighten-2"><b> Description </b></td>
+        <td class="light-blue lighten-2"><b> Issuing Date </b></td>
+        <td class="light-blue lighten-2"><b> Due Date </b></td>
+        <td class="light-blue lighten-2"><b> Date of Completion </b></td>
       </tr>
 
       {% for pitch in mypitches %}
