--- a/Base/recportal/templates/recportal/pitches.html
+++ b/Base/recportal/templates/recportal/pitches.html
@@ -6,25 +6,24 @@
 
 {% block content %}
 <div class="container" >
-  <h3 class="center-align"> All Pitches </h3>
   <br>
   <table>
 
     <tr>
-      <td colspan="4" class="center-align light-blue lighten-1"> Pitch Details </td>
-      <td colspan="5" class="center-align light-blue lighten-2"> Task Details </td>
+      <td colspan="4" class="center-align light-blue lighten-1"><b> Pitch Details </b></td>
+      <td colspan="5" class="center-align light-blue lighten-2"><b> Task Details </b></td>
     </tr>
 
     <tr>
-      <td class="light-blue lighten-1"> Candidate </td>
-      <td class="light-blue lighten-1"> Senior </td>
-      <td class="light-blue lighten-1"> Potential Team </td>
-      <td class="light-blue lighten-1"> Approved </td>
-      <td class="light-blue lighten-2"> Title </td>
-      <td class="light-blue lighten-2"> Description </td>
-      <td class="light-blue lighten-2"> Issuing Date </td>
-      <td class="light-blue lighten-2"> Due Date </td>
-      <td class="light-blue lighten-2"> Date of Completion </td>
+      <td class="light-blue lighten-1"><b> Candidate </b></td>
+      <td class="light-blue lighten-1"><b> Senior </b></td>
+      <td class="light-blue lighten-1"><b> Potential Team </b></td>
+      <td class="light-blue lighten-1"><b> Approved </b></td>
+      <td class="light-blue lighten-2"><b> Title </b></td>
+      <td class="light-blue lighten-2"><b> Description </b></td>
+      <td class="light-blue lighten-2"><b> Issuing Date </b></td>
+      <td class="light-blue lighten-2"><b> Due Date </b></td>
+      <td class="light-blue lighten-2"><b> Date of Completion </b></td>
     </tr>
 
     {% for pitch in pitches %}
