Candidate model extended to include phone number and email address.

--- a/Base/recportal/templates/recportal/mycandidates.html
+++ b/Base/recportal/templates/recportal/mycandidates.html
@@ -13,6 +13,8 @@
 
         <tr>
           <td colspan="2"><b> Name </b></td>
+          <td colspan="2"><b> Phone Number </b></td>
+          <td colspan="2"><b> Email ID </b></td>
           <td><b> Skill 1 </b></td>
           <td><b> Skill 2 </b></td>
           <td><b> About </b></td>
@@ -21,6 +23,8 @@
         {% for candidate in data %}
         <tr {% if forloop.counter0|divisibleby:2 %} class="teal lighten-5" {% else %} class="teal lighten-4" {% endif %}>
           <td colspan="2"><a href="{% url 'recportal:profile' candidate.first_name candidate.last_name %}"> {{candidate.first_name}} {{candidate.last_name}} </a> </td>
+          <td colspan="2"> {{candidate.ph}} </td>
+          <td colspan="2"> {{candidate.email}} </td>
           <td> {{ candidate.skill1 }} </td>
           <td> {{ candidate.skill2 }} </td>
           <td colspan="3"> {{candidate.about}} </td>
