--- a/Base/recportal/templates/recportal/candidates.html
+++ b/Base/recportal/templates/recportal/candidates.html
@@ -22,6 +22,8 @@
 
         <tr>
           <td colspan="2"><b> Name </b></td>
+          <td colspan="2"><b> Phone Number </b></td>
+          <td colspan="2"><b> Email ID </b></td>
           <td><b> Skill 1 </b></td>
           <td><b> Skill 2 </b></td>
           <td><b> About </b></td>
@@ -30,6 +32,8 @@
         {% for candidate in data %}
         <tr {% if forloop.counter0|divisibleby:2 %} class="teal lighten-5" {% else %} class="teal lighten-4" {% endif %}>
           <td colspan="2"><a href="{% url 'recportal:profile' candidate.first_name candidate.last_name %}"> {{candidate.first_name}} {{candidate.last_name}} </a> </td>
+          <td colspan="2"> {{candidate.ph}} </td>
+          <td colspan="2"> {{candidate.email}} </td>
           <td> {{ candidate.skill1 }} </td>
           <td> {{ candidate.skill2 }} </td>
           <td colspan="3"> {{candidate.about}} </td>
@@ -52,7 +56,7 @@
             </div>
             {% endif %}{% endfor %}
     {% endif %}
-    
+
     <br>
 
     <div class="container center-align grey lighten-1">
@@ -71,6 +75,16 @@
           <tr>
             <td> Last Name </td>
             <td> <input type="text" name="last_name" maxlength="50" required /> </td>
+          </tr>
+
+          <tr>
+            <td> Phone Number </td>
+            <td> <input type="number" name="ph" required /> </td>
+          </tr>
+
+          <tr>
+            <td> Email Address </td>
+            <td> <input type="email" name="email" maxlength="50" required /> </td>
           </tr>
 
           <tr>
