Core Functionality Ready

--- a/Base/recportal/templates/recportal/profile.html
+++ b/Base/recportal/templates/recportal/profile.html
@@ -37,6 +37,11 @@
         <td class="center-align teal lighten-5"><b> Skill 2:</b>   {{candidate.skill2}}</td>
       </tr>
 
+      <tr>
+        <td class="center-align teal lighten-5"><b> Phone Number: </b>  {{candidate.ph}} </td>
+        <td class="center-align teal lighten-5"><b> Email Address: </b>  {{candidate.email}} </td>
+      </tr>
+
     </table>
   </div>
 
