Added file uploads for rubric feature as proposed in issue #6

--- a/Base/recportal/templates/recportal/pitch.html
+++ b/Base/recportal/templates/recportal/pitch.html
@@ -59,6 +59,10 @@
         <td> <label for="description"> Description: </label> </td>
         <td> <textarea name="description" maxlength="100" class="desc" form="pitch" required></textarea> </td>
       </tr>
+      <tr>
+        <td> <label for="rubric"> Rubric (optional): </label> </td>
+        <td> <input type="file" name="rubric" /> </td>
+      </tr>
     </table>
 
     <br><br>
