Now a badge displays the number of un-dealt with recommendations you have.

--- a/Base/recportal/templates/recportal/base.html
+++ b/Base/recportal/templates/recportal/base.html
@@ -30,7 +30,7 @@
  <ul id="senior_dropdown" class="dropdown-content">
   <li><a href="{% url 'recportal:mypitches' %}">My Pitches</a></li>
   <li><a href="{% url 'recportal:mycandidates' %}">My Candidates</a></li>
-  <li><a href="{% url 'recportal:recommendations' %}">Recommendations</a></li>
+  <li><a href="{% url 'recportal:recommendations' %}">Recommendations<span class="badge">{{request.user.senior.active_recommendations_count}}</span></a></li>
 </ul>
 
  <nav class="blue darken-4">
