views updated for the name change from pitch to assessment

--- a/Base/recportal/templates/recportal/mypitches.html
+++ b/Base/recportal/templates/recportal/mypitches.html
@@ -89,7 +89,7 @@
               <td> Approve Pitch: </td>
               <td>
                 <label>
-                  <input type="checkbox" name="approval" value="True" />
+                  <input type="checkbox" name="pitched" value="True" />
                   <span></span>
                 </label>
             </tr>
